<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="按钮阴影"
            android:textColor="@color/common_black"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:color_normal="@color/color_14c7de"
            app:color_shadow_end="@color/color_grey_divider_line"
            app:color_shadow_start="@color/color_text_grey"
            app:corner="10dp"
            app:shadow_size="5dp"
            app:text="Shadow"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="基本使用"
            android:textColor="@color/colorAccent"
            android:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="10dp"
            app:text="@string/poetry_1"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="6dp"
            app:text="@string/poetry_2"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/color_ffB419"
            app:corner="30dp"
            app:text="@string/poetry_3"
            app:textColor="@color/common_title_bar_bg"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/color_6596ff"
            app:corner="40dp"
            app:text="@string/poetry_4"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="单独设置每个圆角"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/color_6596ff"
            app:corner="40dp"
            app:corner_left_bottom="0dp"
            app:text="单独设置左下角为0dp"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/color_6596ff"
            app:corner="40dp"
            app:corner_left_bottom="0dp"
            app:corner_right_top="0dp"
            app:text="单独设置左下角和右上角为0dp"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Selector"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:color_pressed="@color/color_ffB419"
            app:corner="10dp"
            app:text="点击会变色哦"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="圆形按钮"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:drawable_middle="@drawable/icon_common_loading"
            app:drawable_middle_height="50dp"
            app:drawable_middle_width="50dp"
            app:shape="CIRCLE" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="10dp"
            app:drawable_middle="@drawable/icon_common_loading"
            app:drawable_middle_height="50dp"
            app:drawable_middle_width="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="渐变背景的按钮"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_end="@color/color_end"
            app:color_start="@color/color_start"
            app:corner="10dp"
            app:text="从左到右渐变"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:border_color="#00ff00"
            app:border_width="2dp"
            app:color_direction="RIGHT_LEFT"
            app:color_end="@color/color_end"
            app:color_start="@color/color_start"
            app:corner="20dp"
            app:text="从右到左渐变"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_direction="TOP_BOTTOM"
            app:color_end="@color/color_end"
            app:color_start="@color/color_start"
            app:corner="30dp"
            app:text="从上到下渐变"
            app:textColor="@color/common_title_bar_bg"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_direction="BOTTOM_TOP"
            app:color_end="@color/color_end"
            app:color_start="@color/color_start"
            app:corner="40dp"
            app:text="从下到上渐变"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="有边框按钮"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:border_color="@color/common_title_bar_bg"
            app:border_width="2dp"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="10dp"
            app:text="@string/poetry_1"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:border_color="@color/common_title_bar_bg"
            app:border_width="10dp"
            app:color_normal="@color/colorAccent"
            app:corner="20dp"
            app:text="@string/poetry_2"
            app:textColor="@color/color_14c7de"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:border_color="@color/common_title_bar_bg"
            app:border_width="2dp"
            app:color_normal="@color/colorAccent"
            app:corner="20dp"
            app:corner_left_bottom="0dp"
            app:corner_right_top="0dp"
            app:text="@string/poetry_3"
            app:textColor="@color/common_title_bar_bg"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:border_color="@color/color_text_grey_input"
            app:border_width="2dp"
            app:color_normal="@color/colorAccent"
            app:text="@string/poetry_4"
            app:textColor="@color/common_title_bar_bg"
            app:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="按钮不可点击"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:button_click_able="false"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="10dp"
            app:drawable_padding="20dp"
            app:singleLine="false"
            app:text="app:button_click_able=false\n也可以代码设置"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="带图标的按钮"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="10dp"
            app:drawable_left="@drawable/icon_common_loading"
            app:drawable_padding="20dp"
            app:text="图标在左边"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="20dp"
            app:drawable_padding="3dp"
            app:drawable_right="@drawable/icon_common_loading"
            app:text="图标在右边"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_title_bar_bg"
            app:corner="30dp"
            app:drawable_padding="3dp"
            app:drawable_top="@drawable/icon_common_loading"
            app:text="图标在上边"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.button.SuperButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            app:color_normal="@color/common_black"
            app:corner="40dp"
            app:drawable_bottom="@drawable/icon_common_loading"
            app:drawable_padding="2dp"
            app:text="图标在下边"
            app:textColor="@color/colorAccent"
            app:textSize="22sp" />

        <com.mbg.module.ui.view.layout.round.RoundFrameLayout
            android:id="@+id/round_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            app:isWidthHeightEqual="true"
            app:isRadiusHalfHeight="true"
            app:backgroundColor="@color/color_14c7de"
            app:backgroundPressColor="@color/colorPrimary"
            app:strokeWidth="1dp"
            app:strokeColor="@color/common_black"
            app:strokePressColor="@color/color_6596ff"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_common_loading"/>
        </com.mbg.module.ui.view.layout.round.RoundFrameLayout>

    </LinearLayout>
</ScrollView>